# vgit

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
app/: cli.py  virtual_branch.py  virtual_branch_manager.py
app/commands/: __init__.py  add.py  branch.py  commit.py  init.py  log.py  push.py  status.py  unstage.py
app/utils/: command_utils.py
src/: cli.py  virtual_branch.py
src/commands/: __init__.py  add.py  branch.py  commit.py  init.py  log.py  push.py  status.py  unstage.py
tests/: test_virtual_branch.py  test_virtual_branch_manager.py
tests/test_commands/: test_add.py  test_branch.py  test_commit.py  test_init.py  test_log.py  test_push.py  test_status.py  test_unstage.py
